# shader-editor

./: .gitignore  CMakeLists.txt  ShaderEditor.sln  ShaderScenery.sln  readme.txt
MayaExporter/: exporter.py  exporter.ui  extendedcombobox.py
Release/: readme.txt
Release/Assets/Shaders/: blur_horizontal_glsl_frag.fx  blur_horizontal_glsl_vert.fx  diagnostic_glsl_frag.fx  diagnostic_glsl_vert.fx  diagnostic_hlsl.fx  particle_glsl_frag.fx  particle_glsl_vert.fx  post_effects_glsl_frag.fx  shader_glsl_frag.fx  shader_hlsl.fx  shadow_glsl_frag.fx  shadow_hlsl.fx  water_glsl_vert.fx  water_hlsl.fx
ShaderEditor/: ShaderEditor.vcxproj  ShaderEditor.vcxproj.filters  animation.cpp  animation.h  appGUI.cpp  appGUI.h  application.cpp  application.h  cache.cpp  cache.h  camera.cpp  camera.h  colour.cpp  colour.h  common.h  diagnostic.cpp  diagnostic.h  diagnostics.cpp  diagnostics.h  directx_common.h  directx_engine.h  directx_shader.cpp  directx_shader.h  directx_target.cpp  directx_target.h  directx_texture.cpp  directxcommon.h  directxemitter.cpp  directxemitter.h  directxengine.cpp  directxengine.h  directxmesh.cpp  directxmesh.h  directxshader.cpp  directxshader.h  directxtarget.cpp  directxtarget.h  directxtexture.cpp  directxtexture.h  elements.cpp  (+126 more)
ShaderEditor/Assets/: Emitters.xml  Lights.xml  Lights_Previous.xml  Lights_saved.xml  Meshes.xml  Meshes_saved.xml  Post.xml  PostProcessing.xml  replace_with_saved.py  shader.frag  shader.vert
ShaderEditor/Assets/Compiliers/: GPUShaderAnalyzer.html
ShaderEditor/Assets/Shaders/: blur_glsl_frag.fx  blur_hlsl.fx  blur_horizontal_glsl_frag.fx  blur_horizontal_glsl_vert.fx  blur_horizontal_hlsl.fx  blur_vertical_glsl_frag.fx  blur_vertical_hlsl.fx  depth_glsl_frag.fx  depth_glsl_vert.fx  diagnostic_glsl_frag.fx  diagnostic_hlsl.fx  normal_glsl_frag.fx  normal_glsl_vert.fx  normal_hlsl.fx  normalshader.vert  particle_depth_glsl_vert.fx  particle_depth_hlsl.fx  particle_glsl_frag.fx  particle_glsl_vert.fx  particle_hlsl.fx  particle_normal_glsl_frag.fx  particle_normal_glsl_vert.fx  particle_normal_hlsl.fx  post_effects_glsl_frag.fx  post_effects_glsl_vert.fx  post_effects_hlsl.fx  post_glsl_frag.fx  post_glsl_vert.fx  post_hlsl.fx  pre_effects_glsl_frag.fx  pre_effects_hlsl.fx  shader.frag  shader.hlsl  shader.vert  shader_glsl_frag.fx  shader_glsl_vert.fx  shader_hlsl.fx  shadow_glsl_vert.fx  water_depth_glsl_frag.fx  water_depth_glsl_vert.fx  (+7 more)
ShaderEditor/boost/lib/: libboost_chrono-vc110-mt-1_55.lib  libboost_chrono-vc110-mt-gd-1_55.lib  libboost_chrono-vc110-mt-s-1_55.lib  libboost_chrono-vc110-mt-sgd-1_55.lib  libboost_date_time-vc110-mt-1_55.lib  libboost_date_time-vc110-mt-gd-1_55.lib  libboost_date_time-vc110-mt-s-1_55.lib  libboost_date_time-vc110-mt-sgd-1_55.lib  libboost_filesystem-vc110-1_55.lib  libboost_filesystem-vc110-mt-1_55.lib  libboost_system-vc110-1_55.lib  libboost_system-vc110-gd-1_55.lib  libboost_system-vc110-mt-1_55.lib  libboost_system-vc110-mt-gd-1_55.lib  libboost_thread-vc110-mt-1_55.lib  libboost_thread-vc110-mt-gd-1_55.lib  libboost_thread-vc110-mt-s-1_55.lib  libboost_thread-vc110-mt-sgd-1_55.lib
ShaderEditor/build-gui-Desktop_Qt_5_3_0_MSVC2012_OpenGL_32bit-Debug/: Makefile
ShaderEditor/glslang/lib/: HLSL.lib  OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  (+4 more)
ShaderEditor/maya/: Meshes.ma  shadow.psd
ShaderEditor/qt/: gui.cpp  gui.h  gui.pro  gui.ui  main_qt.cpp  moc_gui.cpp  shaderEditorGUI.ui  ui_gui.h  ui_shaderEditorGUI.h
ShaderEditorGUI/: ShaderEditorGUI.vcxproj  ShaderEditorGUI.vcxproj.filters
ShaderEditorGUI/Debug/: CL.read.1.tlog  CL.write.1.tlog  ShaderEditorGUI.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
ShaderEditorGUI/qt/: main.cpp  main_qt.cpp  moc_shaderEditorGUI.cpp  shaderEditorGUI.cpp  shaderEditorGUI.h  shaderEditorGUI.pro  shaderEditorGUI.ui  ui_shaderEditorGUI.h
ShaderScenery/: ShaderScenery.vcxproj  ShaderScenery.vcxproj.filters  UnitTests.vcxproj  UnitTests.vcxproj.filters  camera.cpp  camera.h  common.cpp  common.h  diagnostic.cpp  diagnostic.h  eventreceiver.cpp  eventreceiver.h  game.cpp  game.h  generated_shader.cpp  generated_shader.h  generatedshader.cpp  generatedshader.h  light_editor.cpp  light_editor.h  lighteditor.cpp  lighteditor.h  logfile.txt  logger.cpp  logger.h  main.cpp  mesh.cpp  mesh.h  normalshader.cpp  normalshader.h  post_shader.cpp  post_shader.h  postshader.cpp  postshader.h  quad.cpp  quad.h  results.h  scene.cpp  scene.h  scenerytests.cpp  (+7 more)
ShaderScenery/Assets/: Camera.xml  Meshes.xml
src/: CMakeLists.txt  animation.cpp  animation.h  app_gui.cpp  app_gui.h  application.cpp  application.h  cache.h  camera.cpp  camera.h  colour.h  common.h  diagnostic.cpp  diagnostic.h  directx_common.h  directx_emitter.cpp  directx_emitter.h  directx_engine.cpp  directx_engine.h  directx_mesh.cpp  directx_mesh.h  directx_shader.cpp  directx_shader.h  directx_target.cpp  directx_target.h  directx_texture.cpp  directx_texture.h  emitter.cpp  emitter.h  float3.h  fragmentlinker.cpp  fragmentlinker.h  grid.cpp  grid.h  int2.h  light.cpp  light.h  logger.cpp  logger.h  main.cpp  (+53 more)
src/glew/: glew32s.lib
src/glew/src/: glew.c
src/qt/: attribute.cpp  attribute.h  attribute_filter_model.cpp  attribute_filter_model.h  attribute_model.cpp  attribute_model.h  editor.cpp  editor.h  editor_model.cpp  editor_model.h  property_setter.cpp  property_setter.h  qt_gui.cpp  qt_gui.h  qt_gui_reloader.cpp  qt_gui_reloader.h  qt_reloader.cpp  qt_reloader.h  stringlist_model.cpp  stringlist_model.h  tweakable.h  tweaker.cpp  tweaker.h  tweaker_model.cpp  tweaker_model.h
src/qt/resources/: DoubleSpinBox.qml  EditorTextArea.qml  EditorWindow.qml  PageColumnLayout.qml  ReloadableWindow.qml  StackColumnLayout.qml  Theme.qml  ThemeData.qml  ToolTippedComboBox.qml  Tweaker.qml  TweakerButton.qml  TweakerComboBox.qml  TweakerComboSpinBox.qml  TweakerControl.qml  TweakerImagePanel.qml  TweakerLabel.qml  TweakerListView.qml  TweakerSpinBox.qml  TweakerWindow.qml  editor.qml  qml.qrc  tweaker.qml
(+277 files in other folders)
